--- a/index.html
+++ b/index.html
@@ -45,5 +45,36 @@
         </button>
       </div>
     </header>
+    <section class="channel-banner">
+      <div class="channel-social-links">
+        <ul>
+          <li class="btn facebook">
+            <i class="fab fa-facebook-square"></i>
+          </li>
+
+          <li class="btn twitter">
+            <i class="fab fa-twitter-square"></i>
+          </li>
+          <li class="btn instagram">
+            <i class="fab fa-instagram-square"></i>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="channel-info">
+      <div class="container">
+        <div class="channel-icon"><img src=./img/logo.jpeg alt="" /></div>
+
+        <div class="channel-title">
+          <h1>Cool Person <i class="fas fa-check-circle"></i></h1>
+
+          <div class="channel-subscriber-count">13.9M subscribers</div>
+        </div>
+
+        <div class="channel-subscribe">
+          <button class="subscribe-btn btn">Subscribe</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
