--- a/index.html
+++ b/index.html
@@ -76,5 +76,39 @@
         </div>
       </div>
     </section>
+    <nav class="channel-nav">
+      <div class="container">
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="current">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#">Videos</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#">Playlists</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#">Community</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#">Channels</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main class="channel-content">
+
+        <div class="container">
+            <section class="channel-videos">
+    
   </body>
 </html>
