--- a/index.html
+++ b/index.html
@@ -109,6 +109,152 @@
 
         <div class="container">
             <section class="channel-videos">
-    
+
+        <div class="vlogs-playlist playlist">
+
+            <h2 class="playlist-title">Uploads</h2>
+
+            <div class="playlist-videos">
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid8.jpg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 8</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">252K views</li>
+                            <li class="video-upload-date">1 day ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid7.jpg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 7</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">376K views</li>
+                            <li class="video-upload-date">4 days ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid6.jpeg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 6</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">441K views</li>
+                            <li class="video-upload-date">1 week ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid5.jpg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 5</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">564K views</li>
+                            <li class="video-upload-date">1 week ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid4.jpg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 4</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">689K views</li>
+                            <li class="video-upload-date">2 weeks ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid3.png" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 3</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">763K views</li>
+                            <li class="video-upload-date">2 weeks ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid2.cms" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 2</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">824K views</li>
+                            <li class="video-upload-date">3 weeks ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="playlist-video" tabindex="0">
+
+                    <div class="video-thumbnail">
+                        <img src="./img/vid1.jpg" alt="">
+                    </div>
+
+                    <div class="video-info">
+                        <h3 class="video-title">Video 1</h3>
+                        <ul class="video-meta-data">
+                            <li class="video-creator">Cool Person <i class="fas fa-check-circle"></i></li>
+                            <li class="video-views">1.1M views</li>
+                            <li class="video-upload-date">1 month ago</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+</section>
   </body>
 </html>
