videos styling part 2

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container">
             <section class="channel-videos">
 
-        <div class="vlogs-playlist playlist">
+        <div class="playlist">
 
             <h2 class="playlist-title">Uploads</h2>
 
