more quick fixes that I forgot to push

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <ul> <button class="sideButton">DW documentary</button></ul>
                 <ul> <button class="sideButton">Tagesshow</button></ul>
                 <ul> <button class="sideButton">Pro Home Cooks</button></ul>
-                <ul> <button class="sideButton">Karl COnrad</button></ul>
+                <ul> <button class="sideButton">Karl Conrad</button></ul>
                 <ul> <button class="sideButton">Marques Brownlee</button></ul>
                 <ul> <button class="sideButton">Business Insider</button></ul>
                 <ul> <button class="sideButton">Tasty</button></ul>
@@ -283,5 +283,6 @@
 
         </div>
 </section>
+</div>
   </body>
 </html>
