--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
           <h1><i class="fab fa-youtube logo-icon"></i>YouTube</h1>
         </a>
       </div>
+      <section class="toggle">
+        <label class="toggle-lable">Dark Mode</label>
+        <label class="switch">
+          <input type="checkbox" name="moreInfo" />
+          <span class="slider"></span>
+        </label>
+      </section>
 
       <div class="site-search">
         <input type="search" placeholder="Search" class="search-input"/>
