seperate JS file added and some tweaks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </div>
       <!-- checkbox slider -->
       <section class="toggle">
-        <label class="toggle-lable">Dark Mode</label>
+        <label class="toggle-lable light">Light</label>
+        <label class="toggle-lable dark"> Dark</label>
         <label class="switch">
           <input type="checkbox" onchange="theme()" name="mode" id="light-dark" />
           <span class="slider"></span>
@@ -294,50 +295,6 @@
         </div>
 </section>
 </div>
-<script>
-  let clicked = false;
-  document.querySelector('.menu-btn').addEventListener("click",()=>{
-  clicked= !clicked;
-      console.log(clicked);
-      if(clicked){
-          document.querySelector('aside').style.cssText = "display: block; position: fixed;left:0;z-index: 1; opacity: 0.9;"
-          document.querySelector('.x-1').style.cssText = "  transform: rotate(-0.15turn); transition: 1s ease; position: absolute;"
-          document.querySelector('.x-2').style.cssText = "  position: absolute; animation-name: move-right; animation-iteration-count: 1; animation-duration: 1s; transform: scale(0);"
-          document.querySelector('.x-3').style.cssText = "  transform: rotate(0.15turn); transition: 1s ease; position: absolute;"
-      } else{
-          document.querySelector('aside').style.cssText = "display: none;"
-          document.querySelector('.x-1').style.cssText = " "
-          document.querySelector('.x-2').style.cssText = "  position: absolute; transform: scale(1);"
-          document.querySelector('.x-3').style.cssText = " "
-      }
-  })
-</script>
-<script>
-  const theme = () => {
-  const vTitles = document.querySelectorAll(".video-title");
-  const mode = document.querySelector("#light-dark").checked;
-  info = document.querySelector(".channel-info").style;
-  head = document.querySelector(".head-section").style;
-  body = document.querySelector("body").style;
-  nav = document.querySelector(".channel-nav").style;
-  if (mode) {
-    vTitles.forEach((h3) => {
-  h3.style.color = "white";
-});
-    info.backgroundColor = "#1d1c1c";
-    nav.backgroundColor = "#1d1c1c";
-    head.backgroundColor = "#202020";
-    body.backgroundColor = "#0c0b0b";
-  } else {
-    vTitles.forEach((h3) => {
-  h3.style.color = "black";
-});
-    info.backgroundColor = "white";
-    nav.backgroundColor = "white";
-    head.backgroundColor = "white";
-    body.backgroundColor = "white";
-  }
-};
-</script>
+<script src="./JS/index.js"></script>
   </body>
 </html>
