checkbox small tweak

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label class="toggle-lable light">Light</label>
         <label class="toggle-lable dark"> Dark</label>
         <label class="switch">
-          <input type="checkbox" onchange="theme()" name="mode" id="light-dark" />
+          <input type="checkbox" onchange="theme()" name="mode" id="light-dark" checked/>
           <span class="slider"></span>
         </label>
       </section>
