--- a/src/index.html
+++ b/src/index.html
@@ -294,6 +294,6 @@
         </div>
 </section>
 </div>
-<script src="./JS/index.js"></script>
+<script src="./js/index.js"></script>
   </body>
 </html>
